// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsTokenConfig config owner can update config for a vault 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 49519,
}
`;

exports[`OsTokenConfig config owner can update default config 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 32132,
}
`;

exports[`OsTokenConfig redeemer owner can update redeemer 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 29967,
}
`;
